src/styles/components/_question-card.scss
.question-card {
  width: 100%;
  max-width: 700px;
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  flex-direction: column;
  border-radius: $border-radius;
  border: 2px solid $primary-light;
  padding: 0.8rem 1.6rem;
  overflow: hidden;

  &.show {
    border-color: $primary-main;
  }

  header {
    width: 100%;
    display: grid;
    grid-template-columns: 1fr 30px;
    grid-gap: 1rem;
    cursor: pointer;

    .article-title {
      font-family: $font-family-primary;
      font-weight: $font-medium;
      color: $black-primary;
      cursor: pointer;
    }

    .icon-btn {
      cursor: pointer;
      outline: none;
      border: none;
      display: flex;
      align-items: center;
      justify-content: center;
      font-size: 3rem;
      color: $primary-main;
      height: max-content;
      width: max-content;
    }
  }

  .article-text {
    margin-top: 1rem;
    display: none;

    &.show {
      display: block;
    }
  }
}

